# AgRobot

arm/launch/: launch.py  launch_motors.py
arm/src/automation/: CMakeLists.txt  automation_node.cpp  package.xml
arm/src/automation/src/: automation_node.cpp
arm/src/keyboard/: package.xml  setup.py
arm/src/keyboard/keyboard/: keyboard.py
arm/src/messages/: CMakeLists.txt
arm/src/motor/: CMakeLists.txt  package.xml
arm/src/motor/src/: clearpath_sc_keyboard_node.cpp  clearpath_sc_ros2_node.cpp
arm/src/movement/: CMakeLists.txt  package.xml
arm/src/movement/src/: movement_node.cpp
arm/src/talon/src/: talon_node.cpp
